Closes #675 fix icon alignment

--- a/frontend/src/style.scss
+++ b/frontend/src/style.scss
@@ -247,3 +247,7 @@ label.disabled {
     cursor: pointer;
     margin-left: 8px;
 }
+
+.anticon {
+    vertical-align: 0 !important// antd fix of icons;
+}
